--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-            <solid android:color="#07A8FF"/>
+            <solid android:color="@color/colorPrimary"/>
             <size android:width="500dp" android:height="400dp"/>
         </shape>
     </item>
